# python-ci-code-coverage

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
python_ci_code_coverage/: hello.py
tests/: test_hello.py
