[tool.poetry]
name = "python-ci-code-coverage"
version = "0.1.0"
description = ""
authors = ["Thimoty Barbieri <thimoty@thimoty.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v --durations=0"
cache_dir = ".cache/pytest_cache"

[tool.coverage.run]
branch = true
source = ["python_ci_code_coverage"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"